--- a/01-Nivelacion/1.1.Onboarding.md
+++ b/01-Nivelacion/1.1.Onboarding.md
@@ -1,3 +1,3 @@
-# Onboarding
-La publicidad en redes sociales implica identificar con precisión a nuestro público objetivo (buyer persona) y desarrollar estrategias digitales efectivas para atraer nuevos negocios.
-Una de las formas más eficaces de generar interacciones con potenciales clientes es a través de plataformas publicitarias como Facebook, Instagram o TikTok, cada una con su propio sistema de gestión de anuncios.
+# 🚀 Onboarding
+- La publicidad en redes sociales implica identificar con precisión a nuestro público objetivo (buyer persona) y desarrollar estrategias digitales efectivas para atraer nuevos negocios.
+- Una de las formas más eficaces de generar interacciones con potenciales clientes es a través de plataformas publicitarias como Facebook, Instagram o TikTok, cada una con su propio sistema de gestión de anuncios.
