--- a/01-Nivelacion/1.3-CreaCuentaGoogleAds.md
+++ b/01-Nivelacion/1.3-CreaCuentaGoogleAds.md
@@ -1,1 +1,39 @@
 # 🚀 Crea tu cuenta Google Ads
+Para comenzar a utilizar **Google Ads**, es obligatorio contar con una cuenta de **Gmail**.  
+A continuación, te mostramos cómo crear tu cuenta paso a paso. 👇
+
+## 1. 📨 Prerrequisito: Tener una cuenta de Gmail
+Si ya tenés una cuenta de Gmail, podés acceder directamente.  
+Si no tenés una, podés crear una nueva desde el mismo sitio de Google Ads.
+
+👉 [https://ads.google.com/](https://ads.google.com/)
+
+## 2. 💼 Crear una nueva cuenta en Google Ads
+
+### 🔑 Acceso inicial
+- Hacé clic en **"Acceder"** si ya tenés cuenta de Gmail.
+- O seleccioná **"Comenzar ahora"** para crear una nueva cuenta de Gmail antes de continuar.
+
+### 📝 Configurar tu cuenta publicitaria
+
+1. Elegí **"Nueva cuenta"**.
+2. Completá la información de tu empresa:
+   - Nombre del negocio
+   - Sitio web (opcional en el paso inicial)
+   - Zona horaria y moneda
+
+3. Activá el **modo experto** (esquina inferior de la pantalla)
+   - Esto te permitirá tener mayor control y flexibilidad en la configuración de tus campañas, sin pasar por el asistente automático de Google.
+
+🧠 *Tip: siempre recomendamos usar el modo experto desde el principio si tenés conocimientos básicos de marketing digital o vas a trabajar con campañas personalizadas.*
+
+## ✅ ¡Listo!
+
+Tu cuenta ya está configurada. Desde el panel principal de Google Ads vas a poder:
+
+- Crear campañas
+- Configurar conversiones
+- Administrar públicos y segmentaciones
+- Agregar métodos de pago
+
+👉 También podés consultar la [Documentación oficial de Google Ads](https://support.google.com/google-ads/) para profundizar en cada herramienta.
