--- a/02-PublicidadAvanzada/2.3-ProyeccionGestionPresupuesto.md
+++ b/02-PublicidadAvanzada/2.3-ProyeccionGestionPresupuesto.md
@@ -2,6 +2,8 @@
 ## Presupuesto Meta Ads
 Crear un presupuesto efectivo para una campaña en Meta Ads es crucial para maximizar el retorno sobre la inversión y alcanzar objetivos de marketing específicos. Este documento proporciona una guía detallada sobre cómo establecer y optimizar el presupuesto para campañas publicitarias en las plataformas de Meta, incluyendo Facebook, Instagram, y más.
 
+![Presupuesto](image-6.png)
+
 - **Establecimiento del Presupuesto**
     - **Determinar los Objetivos de la Campaña**
         - Definir claramente qué se desea lograr con la campaña: reconocimiento de marca, generación de leads, conversiones, etc.
@@ -16,6 +18,7 @@ Crear un presupuesto efectivo para una campaña en Meta Ads es crucial para maxi
         - Distribución Según el Embudo de Marketing:
             - Asignar el presupuesto de manera proporcional a las etapas del embudo de ventas: Conciencia, Consideración y Conversión.
             - Invertir en campañas de conciencia para construir una base de usuarios que luego se moverán hacia abajo en el embudo.
+            ![Embudo de ventas](image-5.png)
         - Balance entre Alcance y Frecuencia:
             - Decidir entre alcanzar a más personas o aumentar la frecuencia de impresiones a un grupo más pequeño.
             - Considerar la naturaleza del producto o servicio; productos de alto valor a menudo requieren una frecuencia más alta para convertir.
