--- a/02-PublicidadAvanzada/2.4-EstrategiasClave.md
+++ b/02-PublicidadAvanzada/2.4-EstrategiasClave.md
@@ -1,11 +1,15 @@
 # Estrategias Clave
 
+![Estrategias Meta Ads](image-3.png)
+
 ## Estrategias Clave para Campañas en Meta Ads
 
 - **Selección de Objetivos Apropiados Definir Objetivos Claros y Relevantes**:
     - Establece metas concretas y medibles que alineen tus campañas con los objetivos de negocio, como aumentar las ventas, mejorar el reconocimiento de marca o fomentar la interacción. Aprovecha las métricas específicas de Meta Ads (conversiones, interacciones, alcance) para vincular tus objetivos con resultados medibles. 
 - **Alineación Estratégica con el Funnel de Ventas**:
     - Adapta tus campañas a la etapa del embudo de ventas en la que se encuentra tu audiencia: Conciencia: Prioriza objetivos como alcance y reconocimiento de marca. Consideración: Genera tráfico, interacciones y visualizaciones de video. Conversión: Fomenta acciones como compras, registros o solicitudes de información.
+    ![Funnel](image-4.png)
+    ![Funnel de conversión](image-7.png)
 - **Segmentación Efectiva para un Impacto Mayor Personalización Basada en Datos**:
     - Segmenta audiencias considerando datos demográficos, intereses y comportamientos para dirigir tus anuncios de manera más eficiente. Utiliza herramientas como "Audience Insights" de Meta para comprender mejor a tu público y sus motivaciones. Creación de Públicos. 
 - **Personalizados y Similares**:
