--- a/02-PublicidadAvanzada/2.5-ActividadPractica.md
+++ b/02-PublicidadAvanzada/2.5-ActividadPractica.md
@@ -52,3 +52,16 @@ Buyer persona: haz la descripción según los puntos que se presentan en la sigu
 | Estrategia con 2 a 3 tácticas publicitarias. Presupuesto estimado: $3.000 UYU/mes durante 3 meses. *(ajustable)* |
 
 
+## Actividad colaborativa: Estrategia conjunta
+### Consigna
+Imaginen que son el equipo de marketing y publicidad de una importante empresa internacional. El CEO de la misma les ha pedido que definan un nuevo negocio y su estrategia para catapultar su éxito.
+
+### Deberán definir los siguientes puntos
+- Negocio, emprendimiento, marca o idea sobre la que trabajarás
+- Ubicación
+- Descripción del producto o servicio
+- Objetivo comercial
+- Funnel de conversión
+- Presupuesto y período de estrategia
+
+![Funnel](image-8.png)
