--- a/02-PublicidadAvanzada/2.5-ActividadPractica.md
+++ b/02-PublicidadAvanzada/2.5-ActividadPractica.md
@@ -1,6 +1,6 @@
 # Actividad práctica: Bocetando el Buyer Persona
 
-## Consigna
+## 👉​ Consigna
 A partir de las características principales de tu emprendimiento, marca, negocio o idea, construye el buyer persona de tu proyecto final. Ten en cuenta la necesidad que cubre el producto o servicio que ofreces para tu cliente ideal.
 
 Buyer persona: haz la descripción según los puntos que se presentan en la siguiente plantilla modelo.
@@ -22,38 +22,29 @@ Buyer persona: haz la descripción según los puntos que se presentan en la sigu
 ![BuyerPersonaCAC](image-2.png)
 
 ## Definiendo la estrategia
-> Negocio, emprendimiento, marca o idea sobre la que trabajarás
+> 🧠 Negocio, emprendimiento, marca o idea sobre la que trabajarás
 
-| 🏷️ Nombre                   | 📍 Ubicación                            | 🛍️ Descripción del producto o servicio                                                                 |
-|----------------------------|-----------------------------------------|--------------------------------------------------------------------------------------------------------|
-| Colonia Aventura Corre     | Instagram: [@coloniaaventuracorre](https://instagram.com/coloniaaventuracorre) | Eventos deportivos: carreras de trail, aventuras y MTB en entornos naturales de Colonia y alrededores. |
+| 🏷️ Nombre                      | Colonia Aventura Corre                                                                 |
+|-------------------------------|----------------------------------------------------------------------------------------|
+| 📍 Ubicación                  | Instagram: [@coloniaaventuracorre](https://instagram.com/coloniaaventuracorre)        |
+| 🛍️ Descripción                | Eventos deportivos: carreras de trail, aventuras y MTB en entornos naturales de Colonia y alrededores. |
+| 🎯 Objetivo comercial          | Aumentar la visibilidad del grupo y lograr más inscripciones a eventos deportivos.     |
+| 🔄 Funnel de conversión       | Consideración                                                                          |
+| 💰 Presupuesto y estrategia   | $3.000 UYU mensuales durante 3 meses (temporada primavera/verano). *(Ejemplo sugerido)* |
 
-| 🎯 Objetivo comercial                                      | 🔄 Funnel de conversión | 💰 Presupuesto y período de estrategia                                                                |
-|------------------------------------------------------------|--------------------------|--------------------------------------------------------------------------------------------------------|
-| Aumentar la visibilidad del grupo y lograr más inscripciones a eventos deportivos. | Consideración             | $3.000 UYU mensuales durante 3 meses (temporada primavera/verano). *(Ejemplo sugerido)*               |
 
 
 ## 🎯 Estrategia Publicitaria
+| 🧭 Objetivo Comercial          | Aumentar la visibilidad del grupo y lograr más inscripciones a eventos deportivos de trail, aventura y MTB. |
+|-------------------------------|-----------------------------------------------------------------------------------------------------------------------------------|
+| 📣 Objetivo Publicitario       | Generar tráfico e interacciones que lleven a inscripciones desde Instagram y otras redes.                                          |
+| 🎯 Segmentación de Público     | Edad: 20 a 55 años<br>Sexo: Todos<br>Idioma: Español<br>Ubicación: Colonia y departamentos cercanos (San José, Soriano, Canelones)<br>Intereses: Running, ciclismo, trail, aventura, vida sana, outdoor, deportes de resistencia |
+| 💸 Presupuesto de Táctica      | Estrategia con 2 a 3 tácticas publicitarias.<br>Presupuesto estimado: $3.000 UYU/mes durante 3 meses. *(ajustable)* |
 
-| 🧭 Objetivo Comercial                                         | 📣 Objetivo Publicitario                                                                 |
-|---------------------------------------------------------------|------------------------------------------------------------------------------------------|
-| Aumentar la visibilidad del grupo y lograr más inscripciones a eventos deportivos de trail, aventura y MTB. | Generar tráfico e interacciones que lleven a inscripciones desde Instagram y otras redes. |
-
-| 🎯 Segmentación de Público                                                                                     |
-|----------------------------------------------------------------------------------------------------------------|
-| - Edad: 20 a 55 años  
-| - Sexo: Todos  
-| - Idioma: Español  
-| - Ubicación: Colonia y departamentos cercanos (San José, Soriano, Canelones)  
-| - Intereses: Running, ciclismo, trail, aventura, vida sana, outdoor, deportes de resistencia |
-
-| 💸 Presupuesto de Táctica                                                                                      |
-|----------------------------------------------------------------------------------------------------------------|
-| Estrategia con 2 a 3 tácticas publicitarias. Presupuesto estimado: $3.000 UYU/mes durante 3 meses. *(ajustable)* |
 
 
 ## Actividad colaborativa: Estrategia conjunta
-### Consigna
+### 👉​ Consigna
 Imaginen que son el equipo de marketing y publicidad de una importante empresa internacional. El CEO de la misma les ha pedido que definan un nuevo negocio y su estrategia para catapultar su éxito.
 
 ### Deberán definir los siguientes puntos
