--- a/02-PublicidadAvanzada/2.5-ActividadPractica.md
+++ b/02-PublicidadAvanzada/2.5-ActividadPractica.md
@@ -3,17 +3,18 @@
 ## 👉​ Consigna
 A partir de las características principales de tu emprendimiento, marca, negocio o idea, construye el buyer persona de tu proyecto final. Ten en cuenta la necesidad que cubre el producto o servicio que ofreces para tu cliente ideal.
 
-Buyer persona: haz la descripción según los puntos que se presentan en la siguiente plantilla modelo.
+**Buyer persona**: haz la descripción según los puntos que se presentan en la siguiente plantilla modelo.
+
 ![BuyerPersona](image.png)
 
 ### Ejemplo 
 ![Ejemplo BuyerPersona](image-1.png)
 
 ## Estrategia y definiciones tácticas
-- **Consigna**
-    - Desarrolla la estrategia.
-    - Desarrolla entre una y tres tácticas publicitarias que respondan a esa estrategia.
-    - Ten presente que, para el Proyecto Final, deberás definir tres campañas que viabilicen la estrategia. Utiliza esta instancia práctica para avanzar hacia ello.
+### 👉 **Consigna**
+- Desarrolla la estrategia.
+ - Desarrolla entre una y tres tácticas publicitarias que respondan a esa estrategia.
+- Ten presente que, para el Proyecto Final, deberás definir tres campañas que viabilicen la estrategia. Utiliza esta instancia práctica para avanzar hacia ello.
 - **A tener en cuenta**
     - Recuerda todo lo trabajado la clase anterior. Ten presente las características de tu negocio, emprendimiento o idea, como así también todos los aspectos definidos en tu **Buyer Persona**
     - Utiliza los templates de las siguientes páginas tal y como lo necesites según tu estrategia.
