--- a/02-PublicidadAvanzada/2.5-ActividadPractica.md
+++ b/02-PublicidadAvanzada/2.5-ActividadPractica.md
@@ -57,3 +57,43 @@ Imaginen que son el equipo de marketing y publicidad de una importante empresa i
 - Presupuesto y período de estrategia
 
 ![Funnel](image-8.png)
+
+# 🏁 Estrategia de Negocio: Colonia Aventura Corre
+
+## 🧠 Negocio / Emprendimiento / Marca
+**Colonia Aventura Corre** es una organización deportiva que diseña, organiza y promueve eventos de trail running, MTB y carreras de aventura en entornos naturales de Uruguay. Buscamos fomentar el deporte, el turismo activo y la vida saludable.
+
+## 📍 Ubicación
+Colonia del Sacramento, Uruguay.  
+Con presencia física en la ciudad y alcance digital a nivel nacional.
+
+## 🏞️ Descripción del Producto / Servicio
+Organizamos **eventos deportivos al aire libre**, como:
+- Carreras de trail running
+- Competencias de mountain bike (MTB)
+- Desafíos de aventura multidisciplinarios
+
+Cada evento se realiza en entornos naturales y paisajes únicos del interior uruguayo, promoviendo la conexión con la naturaleza y el espíritu deportivo. Brindamos una experiencia integral que incluye inscripciones online, cobertura fotográfica, premiación, hidratación, y difusión en redes.
+
+## 🎯 Objetivo Comercial
+Aumentar la visibilidad de la marca y lograr un crecimiento del 30% en las inscripciones a los eventos deportivos en los próximos 6 meses.
+
+## 🧭 Funnel de Conversión
+Actualmente la marca se encuentra entre las etapas de **consideración** y **decisión**:
+
+- **ToFu (Top of Funnel)**: Publicidad en redes sociales y presencia en comunidades deportivas.
+- **MoFu (Middle of Funnel)**: Contenido educativo, testimonios, fotos y videos de eventos pasados.
+- **BoFu (Bottom of Funnel)**: Formularios de inscripción y contacto vía WhatsApp, e-mail o Instagram.
+
+## 💰 Presupuesto y Período de Estrategia
+
+- **Presupuesto mensual estimado**: $3.000 a $5.000 UYU en publicidad paga (Meta Ads y Google Ads).  
+- **Período de ejecución**: 6 meses (desde septiembre 2025 a febrero 2026), cubriendo primavera-verano, la temporada más activa.
+
+📌 En este período se trabajará con campañas de:
+- Leads (captación de datos)
+- Conversiones (inscripción a eventos)
+- Reconocimiento de marca (awareness en nuevas zonas del país)
+
+---
+
