--- a/02-PublicidadAvanzada/2.5-ActividadPractica.md
+++ b/02-PublicidadAvanzada/2.5-ActividadPractica.md
@@ -85,6 +85,15 @@ Actualmente la marca se encuentra entre las etapas de **consideración** y **dec
 - **MoFu (Middle of Funnel)**: Contenido educativo, testimonios, fotos y videos de eventos pasados.
 - **BoFu (Bottom of Funnel)**: Formularios de inscripción y contacto vía WhatsApp, e-mail o Instagram.
 
+
+| 🧩 Etapa        | 🎯 Acción Clave                                                                 | 🥅 Objetivo |
+|----------------|----------------------------------------------------------------------------------|------------|
+| 🧲 Atracción    | Publicidad paga en Meta Ads (Facebook e Instagram), videos de eventos anteriores, reels virales | Aumentar el alcance y el reconocimiento de marca |
+| 💬 Interacción  | Contenido educativo en redes (tips de entrenamiento, nutrición), encuestas, lives, respuestas a comentarios | Generar interés y conversación con la comunidad |
+| 🛒 Conversión    | Formularios instantáneos en campañas de leads, links de inscripción, llamados a la acción claros | Obtener datos de contacto e inscripciones efectivas |
+| 🔁 Fidelización | Envío de fotos post-evento, agradecimientos personalizados, sorteos para participantes frecuentes | Construir comunidad y lograr participación recurrente |
+
+
 ## 💰 Presupuesto y Período de Estrategia
 
 - **Presupuesto mensual estimado**: $3.000 a $5.000 UYU en publicidad paga (Meta Ads y Google Ads).  
@@ -94,6 +103,3 @@ Actualmente la marca se encuentra entre las etapas de **consideración** y **dec
 - Leads (captación de datos)
 - Conversiones (inscripción a eventos)
 - Reconocimiento de marca (awareness en nuevas zonas del país)
-
----
-
