--- a/02-PublicidadAvanzada/2.5-ActividadPractica.md
+++ b/02-PublicidadAvanzada/2.5-ActividadPractica.md
@@ -27,20 +27,20 @@ A partir de las características principales de tu emprendimiento, marca, negoci
 
 | 🏷️ Nombre                      | Colonia Aventura Corre                                                                 |
 |-------------------------------|----------------------------------------------------------------------------------------|
-| 📍 Ubicación                  | Instagram: [@coloniaaventuracorre](https://instagram.com/coloniaaventuracorre)        |
-| 🛍️ Descripción                | Eventos deportivos: carreras de trail, aventuras y MTB en entornos naturales de Colonia y alrededores. |
-| 🎯 Objetivo comercial          | Aumentar la visibilidad del grupo y lograr más inscripciones a eventos deportivos.     |
-| 🔄 Funnel de conversión       | Consideración                                                                          |
-| 💰 Presupuesto y estrategia   | $3.000 UYU mensuales durante 3 meses (temporada primavera/verano). *(Ejemplo sugerido)* |
+| 📍 **Ubicación**                  | Instagram: [@coloniaaventuracorre](https://instagram.com/coloniaaventuracorre)        |
+| 🛍️ **Descripción**                | Eventos deportivos: carreras de trail, aventuras y MTB en entornos naturales de Colonia y alrededores. |
+| 🎯 **Objetivo comercial**         | Aumentar la visibilidad del grupo y lograr más inscripciones a eventos deportivos.     |
+| 🔄 **Funnel de conversión**       | Consideración                                                                          |
+| 💰 P**resupuesto y estrategia**   | $3.000 a $5.000 UYU en publicidad paga |
 
 
 
 ## 🎯 Estrategia Publicitaria
-| 🧭 Objetivo Comercial          | Aumentar la visibilidad del grupo y lograr más inscripciones a eventos deportivos de trail, aventura y MTB. |
+| 🧭 **Objetivo Comercial**          | Aumentar la visibilidad del grupo y lograr más inscripciones a eventos deportivos de trail, aventura y MTB. |
 |-------------------------------|-----------------------------------------------------------------------------------------------------------------------------------|
-| 📣 Objetivo Publicitario       | Generar tráfico e interacciones que lleven a inscripciones desde Instagram y otras redes.                                          |
-| 🎯 Segmentación de Público     | Edad: 20 a 55 años<br>Sexo: Todos<br>Idioma: Español<br>Ubicación: Colonia y departamentos cercanos (San José, Soriano, Canelones)<br>Intereses: Running, ciclismo, trail, aventura, vida sana, outdoor, deportes de resistencia |
-| 💸 Presupuesto de Táctica      | Estrategia con 2 a 3 tácticas publicitarias.<br>Presupuesto estimado: $3.000 UYU/mes durante 3 meses. *(ajustable)* |
+| 📣 **Objetivo Publicitario**       | Generar tráfico e interacciones que lleven a inscripciones desde Instagram y otras redes.                                          |
+| 🎯** Segmentación de Público**     | **Edad**: 20 a 55 años<br>**Sexo**: Todos<br>**Idioma**: Español<br>**Ubicación**: Colonia y departamentos cercanos (San José, Soriano, Canelones)<br>**Intereses**: Running, ciclismo, trail, aventura, vida sana, outdoor, deportes de resistencia |
+| 💸 **Presupuesto de Táctica**      | Estrategia con 2 a 3 tácticas publicitarias.<br>Presupuesto estimado: $3.000 a $5.000 UYU/mes durante 3 meses. *(ajustable)* |
 
 
 
