--- a/02-PublicidadAvanzada/2.5-ActividadPractica.md
+++ b/02-PublicidadAvanzada/2.5-ActividadPractica.md
@@ -31,7 +31,7 @@ A partir de las características principales de tu emprendimiento, marca, negoci
 | 🛍️ **Descripción**                | Eventos deportivos: carreras de trail, aventuras y MTB en entornos naturales de Colonia y alrededores. |
 | 🎯 **Objetivo comercial**         | Aumentar la visibilidad del grupo y lograr más inscripciones a eventos deportivos.     |
 | 🔄 **Funnel de conversión**       | Consideración                                                                          |
-| 💰 P**resupuesto y estrategia**   | $3.000 a $5.000 UYU en publicidad paga |
+| 💰 **Presupuesto y estrategia**   | $3.000 a $5.000 UYU en publicidad paga |
 
 
 
@@ -39,7 +39,7 @@ A partir de las características principales de tu emprendimiento, marca, negoci
 | 🧭 **Objetivo Comercial**          | Aumentar la visibilidad del grupo y lograr más inscripciones a eventos deportivos de trail, aventura y MTB. |
 |-------------------------------|-----------------------------------------------------------------------------------------------------------------------------------|
 | 📣 **Objetivo Publicitario**       | Generar tráfico e interacciones que lleven a inscripciones desde Instagram y otras redes.                                          |
-| 🎯** Segmentación de Público**     | **Edad**: 20 a 55 años<br>**Sexo**: Todos<br>**Idioma**: Español<br>**Ubicación**: Colonia y departamentos cercanos (San José, Soriano, Canelones)<br>**Intereses**: Running, ciclismo, trail, aventura, vida sana, outdoor, deportes de resistencia |
+| 🎯 **Segmentación de Público**     | **Edad**: 20 a 55 años<br>**Sexo**: Todos<br>**Idioma**: Español<br>**Ubicación**: Colonia y departamentos cercanos (San José, Soriano, Canelones)<br>**Intereses**: Running, ciclismo, trail, aventura, vida sana, outdoor, deportes de resistencia |
 | 💸 **Presupuesto de Táctica**      | Estrategia con 2 a 3 tácticas publicitarias.<br>Presupuesto estimado: $3.000 a $5.000 UYU/mes durante 3 meses. *(ajustable)* |
 
 
@@ -56,6 +56,7 @@ Imaginen que son el equipo de marketing y publicidad de una importante empresa i
 - Funnel de conversión
 - Presupuesto y período de estrategia
 
+### Ejemplo de Funnel de conversión
 ![Funnel](image-8.png)
 
 # 🏁 Estrategia de Negocio: Colonia Aventura Corre
@@ -88,10 +89,10 @@ Actualmente la marca se encuentra entre las etapas de **consideración** y **dec
 
 | 🧩 Etapa        | 🎯 Acción Clave                                                                 | 🥅 Objetivo |
 |----------------|----------------------------------------------------------------------------------|------------|
-| 🧲 Atracción    | Publicidad paga en Meta Ads (Facebook e Instagram), videos de eventos anteriores, reels virales | Aumentar el alcance y el reconocimiento de marca |
-| 💬 Interacción  | Contenido educativo en redes (tips de entrenamiento, nutrición), encuestas, lives, respuestas a comentarios | Generar interés y conversación con la comunidad |
-| 🛒 Conversión    | Formularios instantáneos en campañas de leads, links de inscripción, llamados a la acción claros | Obtener datos de contacto e inscripciones efectivas |
-| 🔁 Fidelización | Envío de fotos post-evento, agradecimientos personalizados, sorteos para participantes frecuentes | Construir comunidad y lograr participación recurrente |
+| 🧲 **Atracción**    | Publicidad paga en Meta Ads (Facebook e Instagram), videos de eventos anteriores, reels virales | Aumentar el alcance y el reconocimiento de marca |
+| 💬 **Interacción**  | Contenido educativo en redes (tips de entrenamiento, nutrición), encuestas, lives, respuestas a comentarios | Generar interés y conversación con la comunidad |
+| 🛒 **Conversión**    | Formularios instantáneos en campañas de leads, links de inscripción, llamados a la acción claros | Obtener datos de contacto e inscripciones efectivas |
+| 🔁 **Fidelización** | Envío de fotos post-evento, agradecimientos personalizados, sorteos para participantes frecuentes | Construir comunidad y lograr participación recurrente |
 
 
 ## 💰 Presupuesto y Período de Estrategia
