--- a/12-ProyectoFinal-Entregas/02.PrimeraEntrega.md
+++ b/12-ProyectoFinal-Entregas/02.PrimeraEntrega.md
@@ -10,9 +10,9 @@
 
 | 🧾 Datos Demográficos                        | 💬 Hábitos Sociales                                      | 💡 Preferencias / Motivaciones                                                                 |
 |--------------------------------------------|----------------------------------------------------------|-----------------------------------------------------------------------------------------------|
-| **Edad:** 33 años                           | **Redes Sociales que usa:** Instagram, Facebook, Strava | **Pasatiempos:** Trail running, ciclismo, trekking                                            |
+| **Edad:** 33 años <br> **Estado civil**: Soltera, sin hijos  | **Redes Sociales que usa:** Instagram, Facebook, Strava | **Pasatiempos:** Trail running, ciclismo, trekking                                            |
 | **Género:** Femenino                        | **Frecuencia de uso:** Diaria, principalmente por la noche | **Pasiones:** Naturaleza, autosuperación, bienestar físico y mental                          |
 | **Empleo:** Diseñadora gráfica freelance    | **Influencers/marcas que sigue:** Salomon, Patagonia, corredoras uruguayas | **Contenidos que consume:** Reels de carreras, historias motivacionales, tips de entrenamiento |
-| **Estudios:** Terciarios completos          |                                                          | **Qué espera de una marca:** Claridad en la info, buen trato, comunidad activa, organización |
+| **Estudios:** Tecnicatura completa en Diseño Gráfico          |           | **Qué espera de una marca:** Claridad en la info, buen trato, comunidad activa, organización |
 | **Nivel de ingresos:** Medio                |                                                          | **Motivaciones:**<br>• Mantener una vida activa y saludable<br>• Conectarse con la naturaleza y salir de la rutina<br>• Superarse física y mentalmente<br>• Sentirse parte de una comunidad |
 | **Dónde vive:** Colonia del Sacramento, Uruguay | | **Qué espera de una marca como Colonia Aventura Corre**: <br>• Inscripción fácil y rápida <br>•  Clasificaciones claras y cobertura del evento <br>• Buenas señalizaciones en carrera y logística bien resuelta |
