--- a/12-ProyectoFinal-Entregas/02.PrimeraEntrega.md
+++ b/12-ProyectoFinal-Entregas/02.PrimeraEntrega.md
@@ -1,6 +1,33 @@
 # Primera Entrega
 ## 👉​ Consigna
 
+# 🏞️Colonia Aventura Corre
+## Brief 
+### 📋 Descripción General
+Colonia Aventura Corre es una organización dedicada a la creación y promoción de eventos deportivos al aire libre en Uruguay, especializados en trail running, mountain bike (MTB) y carreras de aventura. Su misión es fomentar un estilo de vida activo y saludable, combinando el deporte con la naturaleza y el turismo local.
+
+### 🎯 Objetivos
+- Aumentar la visibilidad y reconocimiento de la marca en la región y a nivel nacional.
+- Incrementar la cantidad de inscripciones en sus eventos deportivos en un 30% durante la próxima temporada.
+- Generar una comunidad fiel y comprometida que participe regularmente en las actividades.
+
+### 📍 Ubicación
+Colonia del Sacramento, Uruguay, con alcance digital para atraer participantes de todo el país.
+
+### 🏅 Público Objetivo
+Personas de entre 20 y 55 años, apasionadas por los deportes al aire libre, interesados en correr, andar en bicicleta y vivir experiencias de aventura en contacto con la naturaleza.
+
+### 💡 Propuesta de Valor
+Ofrecer eventos deportivos bien organizados en entornos naturales únicos, con un enfoque en la experiencia del participante, seguridad, y un fuerte sentido de comunidad.
+
+### 📈 Estrategia Comercial
+- Campañas digitales segmentadas en redes sociales para generar leads e inscripciones.
+- Contenidos atractivos y educativos para fidelizar a la audiencia.
+- Uso de formularios instantáneos para facilitar el proceso de inscripción.
+- Seguimiento post-evento para mantener el vínculo y motivar la participación recurrente.
+
+---
+
 ## 🧑‍🎯 Buyer Persona
 
 ### Mariana López, 33 años, trabaja como diseñadora gráfica freelance
