--- a/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
+++ b/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
@@ -20,9 +20,8 @@
         - Sobre el negocio, emprendimiento, marca o idea a partir del cual elaborarás el Plan de Publicidad Digital Media Mix: Nombre, descripción, necesidad que cubre, ubicación física y/o digital, objetivo comercial y etapa del funnel en que se encuentra. Adiciona período de la estrategia y presupuesto destinado.
     - Buyer persona con sus principales características: Datos personales, demográficos, hábitos sociales y preferencias.
     - Campaña/s de Meta Ads como necesite el proyecto, que incluya/n:
-    - Táctica publicitaria: Objetivo publicitario definido en función del objetivo comercial y segmentación del público.
-    - Campañas: Configuración de nivel de campaña, configuración de nivel de grupo de anuncios, configuración de anuncios, previsualización del/los anuncio/s.
-
+        - Táctica publicitaria: Objetivo publicitario definido en función del objetivo comercial y segmentación del público.
+        - Campañas: Configuración de nivel de campaña, configuración de nivel de grupo de anuncios, configuración de anuncios, previsualización del/los anuncio/s.
 
 ## Criterios de evaluación
 - Marca, emprendimiento, negocio o idea
@@ -59,7 +58,7 @@
 | **Empleo:** Trabajadores de oficina, freelancers, emprendedores | **Influencers/marcas que sigue:** Deportistas locales, Salomon, Columbia | **Contenidos que consume:** Videos de eventos, tips de entrenamiento, fotos post-evento |
 | **Estudios:** Nivel terciario/universitario |                                                    | **Qué espera de una marca:** Organización, claridad, comunidad activa                    |
 | **Nivel de ingresos:** Medio        |                                                    | **🧠 Motivaciones:**<br>- Mantenerse activo y saludable<br>- Conectar con la naturaleza<br>- Superarse física y mentalmente<br>- Sentirse parte de una comunidad |
-| **Dónde vive:** Colonia y zonas cercanas |                                                  |                                                                                         |
+| **Dónde vive:** Colonia y zonas cercanas |            |                                                                |
 
 ## 3. Táctica Publicitaria
 
@@ -98,3 +97,4 @@
 - [ ] Previsualización de anuncios aprobados  
 
 # ¡Vamos por esos corredores! 🏃‍♀️🚵‍♂️🔥
+![ColoniaAventuraCorre](image.png)
