--- a/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
+++ b/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
@@ -17,8 +17,13 @@
 
 - Se debe entregar
     - Estrategia publicitaria que incluya:
-        - Sobre el negocio, emprendimiento, marca o idea a partir del cual elaborarás el Plan de Publicidad Digital Media Mix: Nombre, descripción, necesidad que cubre, ubicación física y/o digital, objetivo comercial y etapa del funnel en que se encuentra. Adiciona período de la estrategia y presupuesto destinado.
-    - Buyer persona con sus principales características: Datos personales, demográficos, hábitos sociales y preferencias.
+        - Sobre el negocio, emprendimiento, marca o idea a partir del cual elaborarás el Plan de Publicidad Digital Media Mix: 
+            - Nombre, descripción, necesidad que cubre, ubicación física y/o digital, objetivo comercial y etapa del funnel en que se encuentra. 
+            - Adiciona período de la estrategia y presupuesto destinado.
+    - Buyer persona con sus principales características: 
+        - Datos personales
+        - Demográficos
+        - Hábitos sociales y preferencias.
     - Campaña/s de Meta Ads como necesite el proyecto, que incluya/n:
         - Táctica publicitaria: Objetivo publicitario definido en función del objetivo comercial y segmentación del público.
         - Campañas: Configuración de nivel de campaña, configuración de nivel de grupo de anuncios, configuración de anuncios, previsualización del/los anuncio/s.
