--- a/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
+++ b/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
@@ -29,13 +29,15 @@
         - Campañas: Configuración de nivel de campaña, configuración de nivel de grupo de anuncios, configuración de anuncios, previsualización del/los anuncio/s.
 
 ## Criterios de evaluación
-- Marca, emprendimiento, negocio o idea
+- **Marca**, emprendimiento, negocio o idea
     - Se presenta de manera detallada y completa, contemplando todos los aspectos descriptivos que permiten comprender sus características básicas, el tipo de producto o servicio ofrecido, la necesidad que busca resolver, su etapa actual en el Funnel de Conversión y su objetivo comercial. Este desarrollo óptimo de la marca, emprendimiento, negocio o idea, aumenta las probabilidades de construir una táctica publicitaria oportuna.
-- Buyer Persona
+- **Buyer Persona**
     - Las características se encuentran claramente desarrolladas. Sus principales aspectos son comprensibles y permiten representar al cliente ideal de manera concisa. La relación entre su necesidad y el producto o servicio de la marca, emprendimiento, negocio o idea, es evidente. Incluye datos personales, demográficos, hábitos sociales, preferencias y, tal vez, otros aspectos complementarios como redes sociales, POV, etcétera.
-- Táctica/s
-    El objetivo publicitario tiene estrecha relación con lo establecido en la estrategia. Es claro que se desprende de ella y, sobre todo, del objetivo comercial. Es posible comprender de qué manera se intenta responder a la necesidad de la marca, emprendimiento, negocio o idea. El objetivo publicitario, a su vez, es un punto de partida claro para la táctica. El objetivo publicitario corresponde a la etapa del funnel en que se encuentra la marca, emprendimiento, negocio o idea. El público publicitario se ha definido en este punto en términos generales que permiten una primera aproximación al target. Se describe a partir de todas las características sugeridas (Rango de edad, sexo, idioma/s, criterios de segmentación geográfica e intereses). A la vez, se menciona el período y presupuesto de táctica, desprendido de la estrategia.
-- Campaña/s Meta Ads según estrategia
+- **Táctica/s**
+    - El objetivo publicitario tiene estrecha relación con lo establecido en la estrategia. Es claro que se desprende de ella y, sobre todo, del objetivo comercial. Es posible comprender de qué manera se intenta responder a la necesidad de la marca, emprendimiento, negocio o idea. 
+    - El objetivo publicitario, a su vez, es un punto de partida claro para la táctica. 
+    - El objetivo publicitario corresponde a la etapa del funnel en que se encuentra la marca, emprendimiento, negocio o idea. El público publicitario se ha definido en este punto en términos generales que permiten una primera aproximación al target. Se describe a partir de todas las características sugeridas (Rango de edad, sexo, idioma/s, criterios de segmentación geográfica e intereses). A la vez, se menciona el período y presupuesto de táctica, desprendido de la estrategia.
+- **Campaña/s Meta Ads según estrategia**
     - Se incluye la evidencia del paso a paso de las configuraciones solicitadas en niveles de campaña, grupos de anuncio y anuncios. A la vez, este paso a paso se encuentra acompañado de descripciones claras y suficientes que permiten entender las decisiones tomadas. Se adjuntan los screenshots de los anuncios y se mencionan todos elemento propios del armado de la campaña, lo cual permite una comprensión total de la misma y del recorrido realizado hasta el anuncio.
 
 # 📊 Estrategia Publicitaria – Colonia Aventura Corre
