--- a/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
+++ b/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
@@ -1,30 +1,30 @@
 # Entrega N°1
-- Objetivos generales
+- **Objetivos generales**
     - Desarrollar la capacidad de aplicar tácticas publicitarias requeridas con base a una estrategia previa.
 
-- Objetivos específicos
+- **Objetivos específicos**
     - Demostrar el manejo, dominio y entendimiento de la plataforma publicitaria Meta Ads.
     - Construir las campañas de Meta Ads que tu Proyecto Final necesite según la estrategia planteada.
     - 👉Recuerda que el PF debe tener un mínimo de tres campañas en el marco de un Plan Publicitario Media Mix.
 
-- Formato
+- **Formato de presentación**
     - Google Docs, Google Slides, Word, PowerPoint o PDF. Debe tener el nombre “Primera-Entrega+Apellido”.
 
-- Sugerencias 
+- **Sugerencias**
     - Permitir comentarios en el archivo
     - Practica el storytelling: Prepara el archivo como si fuese a ser presentado a un cliente o inversionista.
     - Mantén coherencia estética con el branding de la marca que trabajas.
 
-- Se debe entregar
-    - Estrategia publicitaria que incluya:
+- Se debe **entregar**
+    - **Estrategia publicitaria** que incluya:
         - Sobre el negocio, emprendimiento, marca o idea a partir del cual elaborarás el Plan de Publicidad Digital Media Mix: 
             - Nombre, descripción, necesidad que cubre, ubicación física y/o digital, objetivo comercial y etapa del funnel en que se encuentra. 
             - Adiciona período de la estrategia y presupuesto destinado.
-    - Buyer persona con sus principales características: 
+    - **Buyer persona** con sus principales características: 
         - Datos personales
         - Demográficos
         - Hábitos sociales y preferencias.
-    - Campaña/s de Meta Ads como necesite el proyecto, que incluya/n:
+    - **Campaña/s de Meta Ads** como necesite el proyecto, que incluya/n:
         - Táctica publicitaria: Objetivo publicitario definido en función del objetivo comercial y segmentación del público.
         - Campañas: Configuración de nivel de campaña, configuración de nivel de grupo de anuncios, configuración de anuncios, previsualización del/los anuncio/s.
 
