--- a/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
+++ b/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
@@ -58,14 +58,21 @@
 
 ## 2. Buyer Persona
 
-| 🧾 Datos Demográficos                 | 💬 Hábitos Sociales                                  | 💡 Preferencias / Motivaciones                                                          |
-|-------------------------------------|----------------------------------------------------|-----------------------------------------------------------------------------------------|
-| **Edad:** 25 – 40 años              | **Redes sociales que usa:** Instagram, Facebook, Strava | **Pasatiempos:** Trail running, ciclismo, trekking                                     |
-| **Género:** Masculino y femenino    | **Frecuencia de uso:** Diaria, principalmente noche | **Pasiones:** Naturaleza, superación personal, vida saludable                           |
-| **Empleo:** Trabajadores de oficina, freelancers, emprendedores | **Influencers/marcas que sigue:** Deportistas locales, Salomon, Columbia | **Contenidos que consume:** Videos de eventos, tips de entrenamiento, fotos post-evento |
-| **Estudios:** Nivel terciario/universitario |                                                    | **Qué espera de una marca:** Organización, claridad, comunidad activa                    |
-| **Nivel de ingresos:** Medio        |                                                    | **🧠 Motivaciones:**<br>- Mantenerse activo y saludable<br>- Conectar con la naturaleza<br>- Superarse física y mentalmente<br>- Sentirse parte de una comunidad |
-| **Dónde vive:** Colonia y zonas cercanas |            |                                                                |
+| **Características**             | **Emma Thompson**           | **Bruno Gonnet**             | **Camila Perdomo**                       |
+|----------------------------------|--------------------------------------|--------------------------------------|--------------------------------------|
+| Edad, empleo y género            | 38 años, médica, mujer               | 45 años, emprendedor, hombre         | 21 años, estudiante de Educación Física, mujer |
+| Estudios                         | Universitarios completos             | Universitarios incompletos           | Cursando nivel terciario             |
+| Nivel de ingresos                | Medio-alto                           | Alto                                  | Medio-bajo                           |
+| Lugar de residencia              | Colonia del Sacramento               | Colonia Valdense                     | Nueva Helvecia                       |
+| Redes sociales que usa           | Instagram, Facebook                  | Facebook, Strava                     | Instagram, TikTok                    |
+| Frecuencia de uso                | Diaria                               | Varias veces por semana              | Varias veces al día                  |
+| Influencers y marcas que sigue   | @corredoras, @vidasana              | @kilianjornet, marcas outdoor        | Influencers de running en TikTok     |
+| Pasatiempos                      | Running, yoga, leer                  | Trail running, bici de montaña       | Salir con amigos, trotar, gym        |
+| Pasiones                         | Bienestar integral, naturaleza       | Superación, aventura, comunidad      | Salud, deporte, descubrir cosas nuevas |
+| Contenidos que consume           | Podcasts de salud, blogs de running | Videos de carreras, entrevistas      | Reels motivacionales, playlists      |
+| Qué espera de una marca          | Cercanía, propósito, estética        | Profesionalismo, innovación, pasión | Que sea divertida, auténtica, motivadora |
+| Qué espera de Colonia Aventura Corre | Eventos bien organizados, comunidad activa | Desafíos, experiencias únicas        | Sentirse bienvenida, formar parte del grupo |
+
 
 ## 3. Táctica Publicitaria
 
